--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "d3-selection": "1.4.0",
     "d3-shape": "1.3.5",
     "d3-transition": "1.2.0",
+    "query-string": "^6.8.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "5.0.1",
